Fixes #8877: Align create button, search bar and dropdown (#908)

--- a/src/components/BrowseSkill/custom.css
+++ b/src/components/BrowseSkill/custom.css
@@ -49,4 +49,11 @@ div.scrolling-wrapper::-webkit-scrollbar {
 .create-button button div div {
     display: flex;
     align-items: center;
+    justify-content: center;
+    height: 48px;
 }
+
+.create-button button div {
+    width: 100%;
+}
+
